# SAGE

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  stitch_prep.py  test_chat.py  vercel.json  wiki_config.json
backend/: .coverage  .dockerignore  .env.example  Dockerfile  MIGRATIONS.md  alembic.ini  mcp_server.py  pyproject.toml  requirements.txt  sage.db  seed.py  settings.yaml
backend/.sage_memory/swarm_traces/: turn_999_1777133746907.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_peer_chat_tables.py
backend/app/: config.py  database.py  db.py  deps.py  logging_setup.py  main.py  rate_limit.py  schemas.py  security.py
backend/app/agent/: agent_loop.py  context.py  context_window.py  slash_commands.py  system_prompt.py  system_prompt_assessment.py  system_prompt_concepts.py  system_prompt_curriculum.py  system_prompt_explore.py  system_prompt_v2.py  tool_handlers.py  tools.py  (+1 more)
backend/evals/: config.py  run_ablation.py  run_comparison.py  run_eval.py
backend/scripts/: backfill_audience_tags.py  bootstrap_wiki.py  compare_generations.py  eval_image_tutoring.py  eval_sessions.py  merge_wiki_pending.py  preload_concepts.py  promote_authors.py  regenerate_course.py  register_uagents.py  test_pipeline.py  validate_citations.py
backend/tests/: conftest.py  test_auth.py  test_learning_paths.py  test_orchestrator.py  test_prompt_builder.py  test_retrieval.py  test_routers.py  test_verification.py  test_visibility.py
(+2685 files in other folders)
